update java version to 11 from 21, update project version from 4.0-SNAPSHOT to 1.0